Fixed Spacing, Added Credits, Test Badge

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -854,3 +854,38 @@ table.last-line-head tr:last-child {
   -o-animation: rainbow 18s ease infinite;
   animation: rainbow 18s ease infinite;
 }
+
+.stats-badge {
+  background-color: $ultra-color !important;
+  margin-left: 0 !important;
+}
+
+.skills-badge {
+  background-color: $ultra-color !important;
+  margin-left: 0 !important;
+}
+
+.attack-badge {
+  background-color: $ultra-color !important;
+  margin-left: 0 !important;
+}
+
+.defense-badge {
+  background-color: $ultra-color !important;
+  margin-left: 0 !important;
+}
+
+.technique-badge {
+  background-color: $ultra-color !important;
+  margin-left: 0 !important;
+}
+
+.boon-badge {
+  background-color: $ultra-color !important;
+  margin-left: 0 !important;
+}
+
+.negative-badge {
+  background-color: $ultra-color !important;
+  margin-left: 0 !important;
+}
